--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -5,8 +5,9 @@
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/common_content_margin"
-    android:layout_marginEnd="@dimen/common_content_margin"
+    android:layout_marginStart="@dimen/common_content_spacing"
+    android:layout_marginEnd="@dimen/common_content_spacing"
+    android:layout_marginTop="@dimen/card_spacing"
     android:layout_marginBottom="@dimen/card_spacing"
     android:clickable="true"
     android:focusable="true"
@@ -15,18 +16,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_content_margin"
-        android:layout_marginBottom="@dimen/common_content_margin"
+        android:layout_marginTop="@dimen/common_content_spacing"
+        android:layout_marginBottom="@dimen/common_content_spacing"
         android:orientation="vertical"
-        android:paddingStart="@dimen/common_content_margin"
-        android:paddingEnd="@dimen/common_content_margin"
+        android:paddingStart="@dimen/common_content_spacing"
+        android:paddingEnd="@dimen/common_content_spacing"
         >
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/card_image_height"
-            android:layout_marginBottom="@dimen/common_content_margin_small"
+            android:layout_marginBottom="@dimen/common_content_spacing_small"
             android:gravity="top"
             tools:src="@tools:sample/backgrounds/scenic"
             />
