--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="common_content_margin">16dp</dimen>
-    <dimen name="common_content_margin_small">16dp</dimen>
+    <dimen name="common_content_spacing">16dp</dimen>
+    <dimen name="common_content_spacing_small">8dp</dimen>
 
-    <dimen name="card_spacing">10dp</dimen>
+    <dimen name="card_spacing">8dp</dimen>
     <dimen name="card_image_height">200dp</dimen>
     <dimen name="card_title_height">20sp</dimen>
     <dimen name="card_description_height">17sp</dimen>
